--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="index.css">
 
     <title>Currency Converter</title>
@@ -13,39 +17,43 @@
     <main>
         <h1>Currency exchange calculator</h1>
         <div class="wrapper">
-            <div class="exchange-opt">
-                <label class="currency-container" data-type="dollar">
-                    Buy $
-                    <input type="radio" checked="checked" name="radio" value="$">
-                    <span class="checkmark"></span>
-                    0.74
-                </label>
-                <label class="currency-container" data-type="euro">
-                    Buy €
-                    <input type="radio" checked="checked" name="radio" value="€">
-                    <span class="checkmark"></span>
-                    0.83
-                </label>
-                <label class="currency-container" data-type="pound">
-                    Sell $
-                    <input type="radio" checked="checked" name="radio" value="£">
-                    <span class="checkmark"></span>
-                    1.36
-                </label>
-                <label class="currency-container" data-type="pound">
-                    Sell €
-                    <input type="radio" checked="checked" name="radio" value="£">
-                    <span class="checkmark"></span>
-                    1.22
-                </label>
+            <div class="input-field">
+                <div class="amount">
+                    <form>
+                        <label for="amount">Amount</label>
+                        <input type="text" name="amount" required>
+                    </form>
+                </div>
+                <div class="from">
+                    <form>
+                        <label for="from">From</label>
+                        <select type="text" name="from" id="from">
+                            <option value="usd">USD - US Dollar</option>
+                            <option value="gbp">GBP - British Pound</option>
+                            <option value="eur">EUR - Euro</option>
+                        </select>
+                    </form>
+                </div>
+                <button class="exchange" onclick="swap()">
+                    <img src="./arrow-right-arrow-left-solid.svg" alt="arrows">
+                </button>
+                <div class="to">
+                    <form>
+                        <label for="to">To</label>
+                        <select type="text" name="to" id="to">
+                            <option value="gbp">GBP - British Pound</option>
+                            <option value="usd">USD - US Dollar</option>
+                            <option value="eur">EUR - Euro</option>
+                        </select>
+                    </form>
+                </div>
             </div>
-            <div class="exchange-res">
-                <form>
-                    <label for="value" class="value-to-exchange">Amount to exchange</label>
-                    <input type="text" name="value" required>
-                    <input type="button" value="Calculate">                   
-                </form>
-                <h3 class="result">Amount to receive: </h3>
+            <div class="output-field">
+                <div class="output-result">
+                    <p id="result-convertedText">1.00 US Dollar =</p>
+                    <p id="result-bigRate">0.93<span class="decimal-rate">785642</span> Euros</p>
+                </div>
+                <button>Convert</button>
             </div>
         </div>
     </main>
