--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="index.css">
 
@@ -20,17 +20,20 @@
             <div class="input-field">
                 <div class="amount">
                     <form>
-                        <label for="amount">Amount</label>
-                        <input type="text" name="amount" id="amount" placeholder="" required>
+                        <label for="amount" class="amountLabel">
+                            Amount
+                            <label for="amount" class="amountInput">Please enter a number</label>
+                        </label>
+                        <input type="text" name="amount" id="amount" placeholder="" required onblur="getVal()">
                     </form>
                 </div>
                 <div class="from">
                     <form>
                         <label for="from">From</label>
                         <select type="text" name="from" id="from">
-                            <option value="usd">USD - US Dollar</option>
-                            <option value="gbp">GBP - British Pound</option>
-                            <option value="eur">EUR - Euro</option>
+                            <option class="usdF" value="usd">USD - US Dollar</option>
+                            <option class="gbpF" value="gbp">GBP - British Pound</option>
+                            <option class="eurF" value="eur">EUR - Euro</option>
                         </select>
                     </form>
                 </div>
@@ -41,9 +44,9 @@
                     <form>
                         <label for="to">To</label>
                         <select type="text" name="to" id="to">
-                            <option value="gbp">GBP - British Pound</option>
-                            <option value="usd">USD - US Dollar</option>
-                            <option value="eur">EUR - Euro</option>
+                            <option class="gbpI" value="gbp">GBP - British Pound</option>
+                            <option class="usdI" value="usd">USD - US Dollar</option>
+                            <option class="eurI" value="eur">EUR - Euro</option>
                         </select>
                     </form>
                 </div>
@@ -55,11 +58,10 @@
                         <span id="inputCurrency"></span>
                     </p>
                     <p id="result-bigRate">
-                        <span id="finalResult"></span> 
-                        <span class="decimal-rate">
-                        </span><span id="output-currency"></span></p>
+                        <span id="finalResult"></span><span class="decimal-rate"></span>
+                        <span id="output-currency"></span></p>
                 </div>
-                <button onclick="showResult()">Convert</button>
+                <button onclick="showResult()" id="convert">Convert</button>
             </div>
         </div>
     </main>
